Messages page added

--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -32,6 +32,7 @@ html(lang="en")
                 .mainSectionContainer.col-10.col-md-8.col-lg-6
                     .titleContainer
                         h1 #{pageTitle}
+                        block headerButton
 
                     block content
 
@@ -46,3 +47,4 @@ html(lang="en")
         block scripts
 
         script(src="/js/common.js")
+
